bug 817533 - failed system proxy lookups should not fallback to manual configs r=jduell